--- a/ecommerce-websites.html
+++ b/ecommerce-websites.html
@@ -1,3 +1,6 @@
+---
+permalink: /ecommerce-websites/
+---
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -31,12 +34,12 @@
         <title>E-commerce Websites | Erith South East London | Sybiltec</title>       
         <meta name="Description" content="An e-commerce website is required for selling products and/or services online. Contact me for an online store built on WooCommerce or Shopify.">
         <meta name="robots" content="all">
-        <link rel="canonical" href="https://sybiltec.com/ecommerce-websites">
+        <link rel="canonical" href="https://sybiltec.com/ecommerce-websites/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="E-commerce Websites | Erith Bexley South East London | Sybiltec" />
         <meta property="og:description" content="An e-commerce website is required for selling products and/or services online. Contact me for an online store built on WooCommerce or Shopify." />
-        <meta property="og:url" content="https://sybiltec.com/ecommerce-websites" />
+        <meta property="og:url" content="https://sybiltec.com/ecommerce-websites/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -116,7 +119,7 @@
     </head>
     <body>
         <div class="announcement-bar">
-            <a href="https://sybiltec.com/web-design-bexley">Click Here for Subsidised Web Design Services for Bexley Businesses</a>
+            <a href="https://sybiltec.com/web-design-bexley/">Click Here for Subsidised Web Design Services for Bexley Businesses</a>
         </div>
         <div class="header">
                 <div class="container-1140">
@@ -130,12 +133,12 @@
                             <div class="nav">
                                     <div class="topnav" id="myTopnav">
                                         <a href="/">Home</a>
-                                        <a href="https://sybiltec.com/about">About</a>
-                                        <a href="https://sybiltec.com/services">Services</a>
-                                        <a href="https://sybiltec.com/clients">Clients</a>
-                                        <a href="https://sybiltec.com/faqs">FAQs</a>
-                                        <a href="https://sybiltec.com/blog">Blog</a>
-                                        <a href="https://sybiltec.com/contact">Contact</a>
+                                        <a href="https://sybiltec.com/about/">About</a>
+                                        <a href="https://sybiltec.com/services/">Services</a>
+                                        <a href="https://sybiltec.com/clients/">Clients</a>
+                                        <a href="https://sybiltec.com/faqs/">FAQs</a>
+                                        <a href="https://sybiltec.com/blog/">Blog</a>
+                                        <a href="https://sybiltec.com/contact/">Contact</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
                                         </a>
@@ -177,7 +180,7 @@
 
                 <h2>Sybiltec's E-commerce Website Service</h2>
 
-                <p>My e-commerce website service consists of website design and development of an online store on either Shopify or WooCommerce, depending on your preference and requirements. If you are not sure which platform is right for you, I can advise you to make the best choice. For more information, you can also read my blog post on <a href="https://sybiltec.com/shopify-woocommerce">Shopify vs WooCommerce: What are the Differences?</a></p>
+                <p>My e-commerce website service consists of website design and development of an online store on either Shopify or WooCommerce, depending on your preference and requirements. If you are not sure which platform is right for you, I can advise you to make the best choice. For more information, you can also read my blog post on <a href="https://sybiltec.com/shopify-woocommerce/">Shopify vs WooCommerce: What are the Differences?</a></p>
 
                 <h3>E-commerce Website Migration</h3>
 
@@ -185,7 +188,7 @@
 
                 <h2>Who This Service Suitable is For</h2>
 
-                <p>If you are a business owner who sells or is planning to sell products and/or services on your website, then my e-commerce service would be perfect for you. If you need a website but do not plan to sell online, please see my <a href="https://sybiltec.com/website-design">Small Business Website</a> service instead.</p>
+                <p>If you are a business owner who sells or is planning to sell products and/or services on your website, then my e-commerce service would be perfect for you. If you need a website but do not plan to sell online, please see my <a href="https://sybiltec.com/website-design/">Small Business Website</a> service instead.</p>
 
                 <h2>What the Process Involves</h2>
 
@@ -212,7 +215,7 @@
 
                 <p>WooCommerce is a plugin which works with the WordPress software. You will need to choose a hosting provider so that we can set up WordPress and build the site. I can help you to choose the hosting service that is most suitable for your needs.</p>
 
-                <p>You must maintain your WordPress site on a regular basis to keep plugins, themes and WordPress core files up to date. Being a busy business owner, you probably don't have the time to spend with maintaining your website, so please consider taking up my <a href="https://sybiltec.com/website-maintenance">Website Maintenance</a> service for help with managing your site.</p>
+                <p>You must maintain your WordPress site on a regular basis to keep plugins, themes and WordPress core files up to date. Being a busy business owner, you probably don't have the time to spend with maintaining your website, so please consider taking up my <a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a> service for help with managing your site.</p>
 
                 <h2>Examples of E-commerce Websites</h2>
 
@@ -414,7 +417,7 @@
                     </div>
                 </div>
 
-                <p>Are you a business owner in <strong>Bexley</strong> or the surrounding areas looking to build an <strong>e-commerce website</strong>? <a href="https://sybiltec.com/contact">Contact me</a> today.</p>
+                <p>Are you a business owner in <strong>Bexley</strong> or the surrounding areas looking to build an <strong>e-commerce website</strong>? <a href="https://sybiltec.com/contact/">Contact me</a> today.</p>
             </div>
         </div>
         <div class="contact section">
@@ -425,7 +428,7 @@
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
                     </div>
                 </div>
                 </div>
@@ -436,20 +439,20 @@
                     <div class="col-3">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="https://sybiltec.com/about">About</a></p>
-                        <p><a href="https://sybiltec.com/contact">Contact</a></p>
-                        <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybiltec.com/privacy-notice">Privacy Notice</a></p>
-                        <p><a href="https://sybiltec.com/sitemap">Sitemap</a></p>
+                        <p><a href="https://sybiltec.com/about/">About</a></p>
+                        <p><a href="https://sybiltec.com/contact/">Contact</a></p>
+                        <p><a href="https://sybiltec.com/terms-and-conditions/">Terms and Conditions</a></p>
+                        <p><a href="https://sybiltec.com/privacy-notice/">Privacy Notice</a></p>
+                        <p><a href="https://sybiltec.com/sitemap/">Sitemap</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
-                        <p><a href="https://sybiltec.com/ecommerce-websites">E-commerce Websites</a></p>
-                        <p><a href="https://sybiltec.com/website-review">Website Review</a></p>
-                        <p><a href="https://sybiltec.com/website-design">Web Design</a></p>
-                        <p><a href="https://sybiltec.com/website-maintenance">Website Maintenance</a></p>
-                        <p><a href="https://sybiltec.com/training">Training</a></p>
-                        <p><a href="https://sybiltec.com/leaflet-design">Leaflet Design</a></p>
+                        <p><a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a></p>
+                        <p><a href="https://sybiltec.com/website-review/">Website Review</a></p>
+                        <p><a href="https://sybiltec.com/website-design/">Web Design</a></p>
+                        <p><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></p>
+                        <p><a href="https://sybiltec.com/training/">Training</a></p>
+                        <p><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></p>
                     </div>
                     <div class="col-3">
                         <div class="ml-form-embed"
