--- a/faqs.html
+++ b/faqs.html
@@ -1,3 +1,6 @@
+---
+permalink: /faqs/
+---
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -195,12 +198,12 @@
         <title>FAQs | Web Designer Erith South East London | Sybiltec</title>       
         <meta name="Description" content="Sybil Mayard provides website design and development services for small businesses. Find the answers to your frequently asked questions (FAQs) here.">
         <meta name="robots" content="all">
-        <link rel="canonical" href="https://sybiltec.com/faqs">
+        <link rel="canonical" href="https://sybiltec.com/faqs/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="FAQs | Web Designer Erith Bexley South East London | Sybiltec" />
         <meta property="og:description" content="Sybil Mayard provides website design and development services for small businesses. Find the answers to your frequently asked questions (FAQs) here." />
-        <meta property="og:url" content="https://sybiltec.com/faqs" />
+        <meta property="og:url" content="https://sybiltec.com/faqs/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -280,7 +283,7 @@
     </head>
     <body>
         <div class="announcement-bar">
-            <a href="https://sybiltec.com/web-design-bexley">Click Here for Subsidised Web Design Services for Bexley Businesses</a>
+            <a href="https://sybiltec.com/web-design-bexley/">Click Here for Subsidised Web Design Services for Bexley Businesses</a>
         </div>
         <div class="header">
                 <div class="container-1140">
@@ -294,12 +297,12 @@
                             <div class="nav">
                                     <div class="topnav" id="myTopnav">
                                         <a href="/">Home</a>
-                                        <a href="https://sybiltec.com/about">About</a>
-                                        <a href="https://sybiltec.com/services">Services</a>
-                                        <a href="https://sybiltec.com/clients">Clients</a>
-                                        <a href="https://sybiltec.com/faqs">FAQs</a>
-                                        <a href="https://sybiltec.com/blog">Blog</a>
-                                        <a href="https://sybiltec.com/contact">Contact</a>
+                                        <a href="https://sybiltec.com/about/">About</a>
+                                        <a href="https://sybiltec.com/services/">Services</a>
+                                        <a href="https://sybiltec.com/clients/">Clients</a>
+                                        <a href="https://sybiltec.com/faqs/">FAQs</a>
+                                        <a href="https://sybiltec.com/blog/">Blog</a>
+                                        <a href="https://sybiltec.com/contact/">Contact</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
                                         </a>
@@ -339,7 +342,7 @@
                 <p>WordPress is the most flexible platform, so if you need a website that will adapt as your business grows, then I would recommend WordPress. However, there is a learning curve associated with it, so if your time is limited and you want to get started more quickly, then Wix would be more suitable as it's user-friendly for those who are managing their first website. Then finally we have Shopify: if you run an e-commerce business then Shopify is the best choice as it includes everything you need to get started with selling your products or services online.</p>
 
                 <h3>What are the differences between Shopify and WooCommerce?</h3>
-                <p>Please read my blog article on <a href="https://sybiltec.com/shopify-woocommerce">Shopify vs WooCommerce: What Are the Differences?</a> which compares the world's two most popular e-commerce platforms.</p>
+                <p>Please read my blog article on <a href="https://sybiltec.com/shopify-woocommerce/">Shopify vs WooCommerce: What Are the Differences?</a> which compares the world's two most popular e-commerce platforms.</p>
 
                 <h3>How can I improve the design of my homepage?</h3>
                 <p>Here are a few tips that you can apply to improve the design of your homepage:</p>
@@ -353,7 +356,7 @@
                 </ol>
 
                 <h3>How do I update my WordPress website?</h3>
-                <p>Please take a look at my blog post: <a href="https://sybiltec.com/guide-to-updating-your-wordpress-website">A Guide to Updating Your WordPress Website</a>.</p>
+                <p>Please take a look at my blog post: <a href="https://sybiltec.com/guide-to-updating-your-wordpress-website/">A Guide to Updating Your WordPress Website</a>.</p>
 
                 <h3>Which Shopify plan is best for me?</h3>
                 <p>If you are just beginning your e-commerce business, then I would recommend choosing the Basic Shopify plan which provides everything you need to start selling your products or services online. When you feel that you are ready to take your business to the next level, you can upgrade to the Shopify plan, which offers advanced features and an enhanced e-commerce experience.</p>
@@ -385,7 +388,7 @@
                 <p>My clients are primarily based in London, but as I operate on a remote working basis I can serve clients anywhere in the UK, or in fact anywhere in the world!</p>
 
                 <h3>How much does a full website build cost?</h3>
-                <p>This would very much depend on the requirements of the project. Please <a href="https://sybiltec.com/contact" target="_blank" rel="noopener noreferrer">get in touch</a> with me to arrange an initial consultation, after which I can provide a detailed and accurate quote for you. </p>
+                <p>This would very much depend on the requirements of the project. Please <a href="https://sybiltec.com/contact/" target="_blank" rel="noopener noreferrer">get in touch</a> with me to arrange an initial consultation, after which I can provide a detailed and accurate quote for you. </p>
 
                 <h3>How long does it take to build a full website?</h3>
                 <p>The time it takes to complete the work would depend on the complexity of the project. A 5-page website could be completed in as little as 4 weeks depending on how quickly I receive the required information. In order for the work to be completed as soon as possible, please provide the required information promptly. An estimated timeframe for completion of the project can be discussed during our initial call.</p>
@@ -404,13 +407,13 @@
                 <p>Preferably, I would like to work with documents submitted via Google Drive - I can provide you with a link to a shared folder. Alternatively, please send me the content by email.</p>
 
                 <h3>What can I expect from the website design process?</h3>
-                <p>You can read about my complete website design process in my blog post, <a href="https://sybiltec.com/web-design-process-explained-12-easy-steps">The Web Design Process Explained in 12 Easy Steps</a>.</p>
+                <p>You can read about my complete website design process in my blog post, <a href="https://sybiltec.com/web-design-process-explained-12-easy-steps/">The Web Design Process Explained in 12 Easy Steps</a>.</p>
 
                 <h3>Would we need to meet in person?</h3>
                 <p>I operate on a remote working basis, so it's possible for us to hold all meetings online. I can meet via Zoom, Google Meet or Microsoft Teams. However, if we are within a travelling distance of each other, I would highly recommend that we meet in person at least for our initial meeting.</p>
 
                 <h3>Can I see examples of your previous work?</h3>
-                <p>Of course, please see the <a href="https://sybiltec.com/website-design">Website Design</a> page for examples of web design projects I have completed for past clients.</p>
+                <p>Of course, please see the <a href="https://sybiltec.com/website-design/">Website Design</a> page for examples of web design projects I have completed for past clients.</p>
 
                 <h3>What are your payment terms?</h3>
                 <p>For website design or website development projects, I will ask for a deposit which will be 25-50% of the total cost, depending on the size of the project. The remainder of the payments will be taken throughout the project and upon project completion.</p>
@@ -418,7 +421,7 @@
                 <h3>What payment methods do you accept?</h3>
                 <p>I accept payments via bank transfer for all services.</p>
 
-                <p>If you would like to purchase one of my website maintenance services, you can also do so directly via the <a href="https://sybiltec.com/website-maintenance">Website Maintenance</a> page. All major debit and credit cards are accepted.</p>
+                <p>If you would like to purchase one of my website maintenance services, you can also do so directly via the <a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a> page. All major debit and credit cards are accepted.</p>
 
                 <h3>What qualifications do you hold?</h3>
                 <p>My most recent qualification is an MSc in Computer Science from the University of Kent.</p>
@@ -435,7 +438,7 @@
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
                     </div>
                 </div>
                 </div>
@@ -446,20 +449,20 @@
                     <div class="col-3">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="https://sybiltec.com/about">About</a></p>
-                        <p><a href="https://sybiltec.com/contact">Contact</a></p>
-                        <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybiltec.com/privacy-notice">Privacy Notice</a></p>
-                        <p><a href="https://sybiltec.com/sitemap">Sitemap</a></p>
+                        <p><a href="https://sybiltec.com/about/">About</a></p>
+                        <p><a href="https://sybiltec.com/contact/">Contact</a></p>
+                        <p><a href="https://sybiltec.com/terms-and-conditions/">Terms and Conditions</a></p>
+                        <p><a href="https://sybiltec.com/privacy-notice/">Privacy Notice</a></p>
+                        <p><a href="https://sybiltec.com/sitemap/">Sitemap</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
-                        <p><a href="https://sybiltec.com/ecommerce-websites">E-commerce Websites</a></p>
-                        <p><a href="https://sybiltec.com/website-review">Website Review</a></p>
-                        <p><a href="https://sybiltec.com/website-design">Web Design</a></p>
-                        <p><a href="https://sybiltec.com/website-maintenance">Website Maintenance</a></p>
-                        <p><a href="https://sybiltec.com/training">Training</a></p>
-                        <p><a href="https://sybiltec.com/leaflet-design">Leaflet Design</a></p>
+                        <p><a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a></p>
+                        <p><a href="https://sybiltec.com/website-review/">Website Review</a></p>
+                        <p><a href="https://sybiltec.com/website-design/">Web Design</a></p>
+                        <p><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></p>
+                        <p><a href="https://sybiltec.com/training/">Training</a></p>
+                        <p><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></p>
                     </div>
                     <div class="col-3">
                         <div class="ml-form-embed"
