--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </head>
     <body>
         <div class="announcement-bar">
-            <a href="https://sybiltec.com/web-design-bexley">Click Here for Subsidised Web Design Services for Bexley Businesses</a>
+            <a href="https://sybiltec.com/web-design-bexley/">Click Here for Subsidised Web Design Services for Bexley Businesses</a>
         </div>
         <div class="header">
                 <div class="container-1140">
@@ -114,12 +114,12 @@
                             <div class="nav">
                                     <div class="topnav" id="myTopnav">
                                         <a href="/">Home</a>
-                                        <a href="https://sybiltec.com/about">About</a>
-                                        <a href="https://sybiltec.com/services">Services</a>
-                                        <a href="https://sybiltec.com/clients">Clients</a>
-                                        <a href="https://sybiltec.com/faqs">FAQs</a>
-                                        <a href="https://sybiltec.com/blog">Blog</a>
-                                        <a href="https://sybiltec.com/contact">Contact</a>
+                                        <a href="https://sybiltec.com/about/">About</a>
+                                        <a href="https://sybiltec.com/services/">Services</a>
+                                        <a href="https://sybiltec.com/clients/">Clients</a>
+                                        <a href="https://sybiltec.com/faqs/">FAQs</a>
+                                        <a href="https://sybiltec.com/blog/">Blog</a>
+                                        <a href="https://sybiltec.com/contact/">Contact</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
                                         </a>
@@ -135,7 +135,7 @@
                     <div class="col-12">
                         <h1>Web Design for the Serious Business Owner</h1>
                         <h2  class="padding-bottom" style="color: #ffffff; font-size: 18px">A freelance web designer supporting small businesses in South East London</h2>
-                        <a id="btn-contact" class="btn-primary" href="https://sybiltec.com/contact">Contact Me</a>
+                        <a id="btn-contact" class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
                     </div>
                 </div>
             </div>
@@ -157,7 +157,7 @@
                 <div class="row">
                     <div class="col-6"><h2>Your Website Worries - Sorted!</h2>
                         <p>Website problems - we all have them. As a <strong>small business owner</strong>, it's likely that you've faced one or more of these issues at some stage during the development of your online presence. Here is a list of recent website problems that my clients have complained about; if you can relate to any of these, get in touch with me today to discuss the best solution for you.</p>
-                        <div class="padding-top"><a id="btn-contact" class="btn-primary" href="https://sybiltec.com/contact">Contact Me</a></div>
+                        <div class="padding-top"><a id="btn-contact" class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a></div>
                     </div>
                     <div class="col-6">
                         <ul class="fa-ul">
@@ -181,7 +181,7 @@
                         <h3>Custom Website Design</h3>
                         <p>If you are looking to create a website that is as unique as you are, I will design a professional and user-friendly website that perfectly reflects your brand and style.</p>
                         <div class="center padding-bottom padding-top">
-                            <a class="btn-primary" href="https://sybiltec.com/website-design">Web Design</a>   
+                            <a class="btn-primary" href="https://sybiltec.com/website-design/">Web Design</a>   
                         </div>
                         </div>
                     </div>
@@ -191,7 +191,7 @@
                         <h3>E-commerce Websites</h3>
                         <p>Are you planning to sell your products or services online? If yes, you'll need an e-commerce site. I will design and build an online store for your business on Shopify or WooCommerce.</p>
                         <div class="center padding-bottom padding-top">
-                            <a class="btn-primary" href="https://sybiltec.com/ecommerce-websites">E-commerce Websites</a>   
+                            <a class="btn-primary" href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a>   
                         </div>
                         </div>
                     </div>
@@ -201,13 +201,13 @@
                         <h3>Website Maintenance</h3>
                         <p>As a business owner, you're most likely a very busy person with little time to spare! I will be your long-term partner to manage the ongoing maintenance of your website.</p>
                         <div class="center padding-bottom padding-top">
-                            <a class="btn-primary" href="https://sybiltec.com/website-maintenance">Web Maintenance</a>   
+                            <a class="btn-primary" href="https://sybiltec.com/website-maintenance/">Web Maintenance</a>   
                         </div>
                         </div>
                     </div>
                 </div>
                 <div class="center padding-bottom padding-top">
-                    <a class="btn-primary" href="https://sybiltec.com/services">See All Services</a>   
+                    <a class="btn-primary" href="https://sybiltec.com/services/">See All Services</a>   
                 </div>
             </div>
         </div>
@@ -242,7 +242,7 @@
                     <div class="col-6">                       
                         <h2>A selection of clients I have recently worked with</h2>
                         <div class="padding-bottom padding-top">
-                            <a class="btn-primary" href="https://sybiltec.com/clients">View All Clients</a>   
+                            <a class="btn-primary" href="https://sybiltec.com/clients/">View All Clients</a>   
                         </div>
                     </div>
                 </div>
@@ -378,7 +378,7 @@
                 <div class="row">
                     <div class="col-4">  
                         <div class="blog-card">   
-                            <a href="https://sybiltec.com/ways-to-speed-up-your-windows-pc">
+                            <a href="https://sybiltec.com/ways-to-speed-up-your-windows-pc/">
                                 <img src="images/white-and-blue-analogue-tachometer-gauge.jpg" 
                                 alt="White and blue analogue tachometer gauge"></a>
                             <div class="blog-card-text">                    
@@ -386,34 +386,34 @@
                                 <p>17 April 2024</p>
                                 <p>Are you suffering from a slow PC? Read our latest post on how to make your computer or laptop run faster.</p>
                                 <div class="padding-bottom padding-top">
-                                    <a class="btn-primary" href="https://sybiltec.com/ways-to-speed-up-your-windows-pc">Speed Up My PC!</a>   
+                                    <a class="btn-primary" href="https://sybiltec.com/ways-to-speed-up-your-windows-pc/">Speed Up My PC!</a>   
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-4">  
                         <div class="blog-card">   
-                            <a href="https://sybiltec.com/user-experience-ux"><img src="images/white-and-black-laptop-400x209.jpg" alt="White and black laptop"></a>
+                            <a href="https://sybiltec.com/user-experience-ux/"><img src="images/white-and-black-laptop-400x209.jpg" alt="White and black laptop"></a>
                                 <div class="blog-card-text">                      
                                 <h3>How to Improve the User Experience of Your Website</h3>
                                 <p>20 March 2024</p>
                                 <p>Good user experience is paramount to your website's success. Read the article for tips on how to improve your website's UX.</p>
                                 <div class="padding-bottom padding-top">
-                                    <a class="btn-primary" href="https://sybiltec.com/user-experience-ux">Improve My UX</a>   
+                                    <a class="btn-primary" href="https://sybiltec.com/user-experience-ux/">Improve My UX</a>   
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-4">          
                         <div class="blog-card">
-                            <a href="https://sybiltec.com/accessible-website-design"><img src="images/disabled-parking-350x183.jpg" 
+                            <a href="https://sybiltec.com/accessible-website-design/"><img src="images/disabled-parking-350x183.jpg" 
                                 alt="Disabled parking"></a>  
                             <div class="blog-card-text">               
                                 <h3>Accessible Website Design</h3>
                                 <p>10 March 2024</p>
                                 <p>Read the article for an introduction to accessibility and quick tips on how to create a website that caters to users with impairments and disabilities.</p>
                                 <div class="padding-bottom padding-top">
-                                    <a class="btn-primary" href="https://sybiltec.com/accessible-website-design">Accessible Design</a>   
+                                    <a class="btn-primary" href="https://sybiltec.com/accessible-website-design/">Accessible Design</a>   
                                 </div>
                             </div>
                         </div>
@@ -421,7 +421,7 @@
                 </div>
             </div>
             <div class="center padding-bottom padding-top">
-                <a class="btn-primary" href="https://sybiltec.com/blog">Read All Articles</a>   
+                <a class="btn-primary" href="https://sybiltec.com/blog/">Read All Articles</a>   
             </div>
         </div>
         </div>
@@ -460,7 +460,7 @@
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
                     </div>
                 </div>
                 </div>
@@ -471,20 +471,20 @@
                     <div class="col-3">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="https://sybiltec.com/about">About</a></p>
-                        <p><a href="https://sybiltec.com/contact">Contact</a></p>
-                        <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybiltec.com/privacy-notice">Privacy Notice</a></p>
-                        <p><a href="https://sybiltec.com/sitemap">Sitemap</a></p>
+                        <p><a href="https://sybiltec.com/about/">About</a></p>
+                        <p><a href="https://sybiltec.com/contact/">Contact</a></p>
+                        <p><a href="https://sybiltec.com/terms-and-conditions/">Terms and Conditions</a></p>
+                        <p><a href="https://sybiltec.com/privacy-notice/">Privacy Notice</a></p>
+                        <p><a href="https://sybiltec.com/sitemap/">Sitemap</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
-                        <p><a href="https://sybiltec.com/ecommerce-websites">E-commerce Websites</a></p>
-                        <p><a href="https://sybiltec.com/website-review">Website Review</a></p>
-                        <p><a href="https://sybiltec.com/website-design">Web Design</a></p>
-                        <p><a href="https://sybiltec.com/website-maintenance">Website Maintenance</a></p>
-                        <p><a href="https://sybiltec.com/training">Training</a></p>
-                        <p><a href="https://sybiltec.com/leaflet-design">Leaflet Design</a></p>
+                        <p><a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a></p>
+                        <p><a href="https://sybiltec.com/website-review/">Website Review</a></p>
+                        <p><a href="https://sybiltec.com/website-design/">Web Design</a></p>
+                        <p><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></p>
+                        <p><a href="https://sybiltec.com/training/">Training</a></p>
+                        <p><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></p>
                     </div>
                     <div class="col-3">
                         <div class="ml-form-embed"
