--- a/sitemap.html
+++ b/sitemap.html
@@ -1,3 +1,6 @@
+---
+permalink: /sitemap/
+---
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -35,7 +38,7 @@
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Sitemap | Sybiltec Web Design" />
         <meta property="og:description" content="Sybiltec offers web design and development services to SMEs in South East London and other areas. View the sitemap for easy navigation of my website." />
-        <meta property="og:url" content="https://sybiltec.com/sitemap" />
+        <meta property="og:url" content="https://sybiltec.com/sitemap/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -110,13 +113,13 @@
         }
         }
         </script>
-        <link rel="canonical" href="https://sybiltec.com/sitemap" />
+        <link rel="canonical" href="https://sybiltec.com/sitemap/" />
         <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
     <body>
         <div class="announcement-bar">
-            <a href="https://sybiltec.com/web-design-bexley">Click Here for Subsidised Web Design Services for Bexley Businesses</a>
+            <a href="https://sybiltec.com/web-design-bexley/">Click Here for Subsidised Web Design Services for Bexley Businesses</a>
         </div>
         <div class="header">
                 <div class="container-1140">
@@ -130,12 +133,12 @@
                             <div class="nav">
                                     <div class="topnav" id="myTopnav">
                                         <a href="/">Home</a>
-                                        <a href="https://sybiltec.com/about">About</a>
-                                        <a href="https://sybiltec.com/services">Services</a>
-                                        <a href="https://sybiltec.com/clients">Clients</a>
-                                        <a href="https://sybiltec.com/faqs">FAQs</a>
-                                        <a href="https://sybiltec.com/blog">Blog</a>
-                                        <a href="https://sybiltec.com/contact">Contact</a>
+                                        <a href="https://sybiltec.com/about/">About</a>
+                                        <a href="https://sybiltec.com/services/">Services</a>
+                                        <a href="https://sybiltec.com/clients/">Clients</a>
+                                        <a href="https://sybiltec.com/faqs/">FAQs</a>
+                                        <a href="https://sybiltec.com/blog/">Blog</a>
+                                        <a href="https://sybiltec.com/contact/">Contact</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
                                         </a>
@@ -163,56 +166,56 @@
                 </ol>
                 <h2>Main</h2>
                 <ul>
-                    <li><a href="https://sybiltec.com/about">About</a></li>
-                    <li><a href="https://sybiltec.com/blog">Blog Page 1</a></li>
-                    <li><a href="https://sybiltec.com/blog-2">Blog Page 2</a></li>
-                    <li><a href="https://sybiltec.com/blog-3">Blog Page 3</a></li>
-                    <li><a href="https://sybiltec.com/clients">Clients</a></li>
-                    <li><a href="https://sybiltec.com/contact">Contact</a></li>
-                    <li><a href="https://sybiltec.com/faqs">FAQs</a></li>
+                    <li><a href="https://sybiltec.com/about/">About</a></li>
+                    <li><a href="https://sybiltec.com/blog/">Blog Page 1</a></li>
+                    <li><a href="https://sybiltec.com/blog-2/">Blog Page 2</a></li>
+                    <li><a href="https://sybiltec.com/blog-3/">Blog Page 3</a></li>
+                    <li><a href="https://sybiltec.com/clients/">Clients</a></li>
+                    <li><a href="https://sybiltec.com/contact/">Contact</a></li>
+                    <li><a href="https://sybiltec.com/faqs/">FAQs</a></li>
                     <li><a href="https://sybiltec.com/">Home</a></li>
-                    <li><a href="https://sybiltec.com/privacy-notice">Privacy Notice</a></li>
-                    <li><a href="https://sybiltec.com/projects">Projects</a></li>
-                    <li><a href="https://sybiltec.com/services">Services</a></li>
-                    <li><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></li>
+                    <li><a href="https://sybiltec.com/privacy-notice/">Privacy Notice</a></li>
+                    <li><a href="https://sybiltec.com/projects/">Projects</a></li>
+                    <li><a href="https://sybiltec.com/services/">Services</a></li>
+                    <li><a href="https://sybiltec.com/terms-and-conditions/">Terms and Conditions</a></li>
                 </ul>
                 <h2>Services</h2>
                 <ul>
-                    <li><a href="https://sybiltec.com/ecommerce-websites">E-commerce Websites</a></li>
-                    <li><a href="https://sybiltec.com/leaflet-design">Leaflet Design</a></li>
-                    <li><a href="https://sybiltec.com/training">Training</a></li>
-                    <li><a href="https://sybiltec.com/website-design">Web Design</a></li>
-                    <li><a href="https://sybiltec.com/web-design-bexley">Web Design Bexley</a></li>
-                    <li><a href="https://sybiltec.com/web-design-surrey">Web Design Surrey</a></li>
-                    <li><a href="https://sybiltec.com/website-maintenance">Website Maintenance</a></li>
-                    <li><a href="https://sybiltec.com/website-review">Website Review</a></li>
+                    <li><a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a></li>
+                    <li><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></li>
+                    <li><a href="https://sybiltec.com/training/">Training</a></li>
+                    <li><a href="https://sybiltec.com/website-design/">Web Design</a></li>
+                    <li><a href="https://sybiltec.com/web-design-bexley/">Web Design Bexley</a></li>
+                    <li><a href="https://sybiltec.com/web-design-surrey/">Web Design Surrey</a></li>
+                    <li><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></li>
+                    <li><a href="https://sybiltec.com/website-review/">Website Review</a></li>
                 </ul>
                 <h2>Blog Posts</h2>
                 <ul>
-                    <li><a href="https://sybiltec.com/5-best-tools-for-remote-working">5 Best Tools for Remote Working</a></li>
-                    <li><a href="https://sybiltec.com/6-reasons-to-use-shopify">7 Reasons Why You Should be Using Shopify</a></li>
-                    <li><a href="https://sybiltec.com/ways-to-speed-up-your-windows-pc">8 Ways to Speed Up Your Windows PC</a></li>
-                    <li><a href="https://sybiltec.com/user-experience-ux">9 Ways to Improve the UX (User Experience) of Your Website</a></li>
-                    <li><a href="https://sybiltec.com/best-free-wordpress-plugins">10 Best Free WordPress Plugins</a></li>
-                    <li><a href="https://sybiltec.com/common-website-mistakes">10 Common Website Mistakes and How to Avoid Them</a></li>
-                    <li><a href="https://sybiltec.com/fix-slow-wordpress-website">10 Reasons Why Your WordPress Website is Slow (and How to Fix Them)</a></li>
-                    <li><a href="https://sybiltec.com/guide-to-updating-your-wordpress-website">A Guide to Updating Your WordPress Website</a></li>
-                    <li><a href="https://sybiltec.com/accessible-website-design">Accessible Design: Creating an Inclusive Website</a></li>
-                    <li><a href="https://sybiltec.com/are-you-inadvertently-abusing-your-customers-data">Are You Inadvertently Abusing Your Customers' Data?</a></li>
-                    <li><a href="https://sybiltec.com/cyber-security-best-practices-for-business">Cyber Security Best Practices for You and Your Business</a></li>
-                    <li><a href="https://sybiltec.com/how-does-a-good-website-showcase-trust">How Does a Good Website Showcase Trust?</a></li>
-                    <li><a href="https://sybiltec.com/upgrade-google-analytics-4">How Do I Upgrade to Google Analytics 4?</a></li>
-                    <li><a href="https://sybiltec.com/backup-wordpress-website-using-updraftplus">How to Backup Your WordPress Website with UpdraftPlus</a></li>
-                    <li><a href="https://sybiltec.com/how-to-choose-web-designer">How to Choose a Web Designer</a></li>
-                    <li><a href="https://sybiltec.com/improve-website-seo">How to Improve the SEO of Your Website</a></li>
-                    <li><a href="https://sybiltec.com/install-ga4-shopify-website">How to Install GA4 on Your Shopify Website</a></li>
-                    <li><a href="https://sybiltec.com/install-ga4-wix-website">How to Install GA4 on Your Wix Website</a></li>
-                    <li><a href="https://sybiltec.com/install-ga4-wordpress-website">How to Install GA4 on Your WordPress Website</a></li>
-                    <li><a href="https://sybiltec.com/google-search-console">How to Use Google Search Console: a Quick Guide</a></li>
-                    <li><a href="https://sybiltec.com/6-tips-for-surviving-remote-working">Remote Working: How to Survive with 6 Tips</a></li>
-                    <li><a href="https://sybiltec.com/shopify-woocommerce">Shopify vs WooCommerce: What Are the Differences?</a></li>
-                    <li><a href="https://sybiltec.com/importance-of-contact-information-on-your-website">The Importance of Contact Information on Your Website</a></li>
-                    <li><a href="https://sybiltec.com/web-design-process-explained-12-easy-steps">The Web Design Process Explained in 12 Easy Steps</a></li>   
+                    <li><a href="https://sybiltec.com/5-best-tools-for-remote-working/">5 Best Tools for Remote Working</a></li>
+                    <li><a href="https://sybiltec.com/6-reasons-to-use-shopify/">7 Reasons Why You Should be Using Shopify</a></li>
+                    <li><a href="https://sybiltec.com/ways-to-speed-up-your-windows-pc/">8 Ways to Speed Up Your Windows PC</a></li>
+                    <li><a href="https://sybiltec.com/user-experience-ux/">9 Ways to Improve the UX (User Experience) of Your Website</a></li>
+                    <li><a href="https://sybiltec.com/best-free-wordpress-plugins/">10 Best Free WordPress Plugins</a></li>
+                    <li><a href="https://sybiltec.com/common-website-mistakes/">10 Common Website Mistakes and How to Avoid Them</a></li>
+                    <li><a href="https://sybiltec.com/fix-slow-wordpress-website/">10 Reasons Why Your WordPress Website is Slow (and How to Fix Them)</a></li>
+                    <li><a href="https://sybiltec.com/guide-to-updating-your-wordpress-website/">A Guide to Updating Your WordPress Website</a></li>
+                    <li><a href="https://sybiltec.com/accessible-website-design/">Accessible Design: Creating an Inclusive Website</a></li>
+                    <li><a href="https://sybiltec.com/are-you-inadvertently-abusing-your-customers-data/">Are You Inadvertently Abusing Your Customers' Data?</a></li>
+                    <li><a href="https://sybiltec.com/cyber-security-best-practices-for-business/">Cyber Security Best Practices for You and Your Business</a></li>
+                    <li><a href="https://sybiltec.com/how-does-a-good-website-showcase-trust/">How Does a Good Website Showcase Trust?</a></li>
+                    <li><a href="https://sybiltec.com/upgrade-google-analytics-4/">How Do I Upgrade to Google Analytics 4?</a></li>
+                    <li><a href="https://sybiltec.com/backup-wordpress-website-using-updraftplus/">How to Backup Your WordPress Website with UpdraftPlus</a></li>
+                    <li><a href="https://sybiltec.com/how-to-choose-web-designer/">How to Choose a Web Designer</a></li>
+                    <li><a href="https://sybiltec.com/improve-website-seo/">How to Improve the SEO of Your Website</a></li>
+                    <li><a href="https://sybiltec.com/install-ga4-shopify-website/">How to Install GA4 on Your Shopify Website</a></li>
+                    <li><a href="https://sybiltec.com/install-ga4-wix-website/">How to Install GA4 on Your Wix Website</a></li>
+                    <li><a href="https://sybiltec.com/install-ga4-wordpress-website/">How to Install GA4 on Your WordPress Website</a></li>
+                    <li><a href="https://sybiltec.com/google-search-console/">How to Use Google Search Console: a Quick Guide</a></li>
+                    <li><a href="https://sybiltec.com/6-tips-for-surviving-remote-working/">Remote Working: How to Survive with 6 Tips</a></li>
+                    <li><a href="https://sybiltec.com/shopify-woocommerce/">Shopify vs WooCommerce: What Are the Differences?</a></li>
+                    <li><a href="https://sybiltec.com/importance-of-contact-information-on-your-website/">The Importance of Contact Information on Your Website</a></li>
+                    <li><a href="https://sybiltec.com/web-design-process-explained-12-easy-steps/">The Web Design Process Explained in 12 Easy Steps</a></li>   
                 </ul>
             </div>
         </div>
@@ -224,7 +227,7 @@
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
                     </div>
                 </div>
                 </div>
@@ -235,21 +238,21 @@
                     <div class="col-3">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="https://sybiltec.com/about">About</a></p>
-                        <p><a href="https://sybiltec.com/contact">Contact</a></p>
-                        <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybiltec.com/privacy-notice">Privacy Notice</a></p>
-                        <p><a href="https://sybiltec.com/sitemap">Sitemap</a></p>
+                        <p><a href="https://sybiltec.com/about/">About</a></p>
+                        <p><a href="https://sybiltec.com/contact/">Contact</a></p>
+                        <p><a href="https://sybiltec.com/terms-and-conditions/">Terms and Conditions</a></p>
+                        <p><a href="https://sybiltec.com/privacy-notice/">Privacy Notice</a></p>
+                        <p><a href="https://sybiltec.com/sitemap/">Sitemap</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
-                        <p><a href="https://sybiltec.com/ecommerce-websites">E-commerce Websites</a></p>
-                        <p><a href="https://sybiltec.com/leaflet-design">Leaflet Design</a></p>
-                        <p><a href="https://sybiltec.com/training">Training</a></p>
-                        <p><a href="https://sybiltec.com/website-design">Web Design</a></p>
-                        <p><a href="https://sybiltec.com/web-design-bexley">Web Design Bexley</a></p>
-                        <p><a href="https://sybiltec.com/website-maintenance">Website Maintenance</a></p>
-                        <p><a href="https://sybiltec.com/website-review">Website Review</a></p>
+                        <p><a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a></p>
+                        <p><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></p>
+                        <p><a href="https://sybiltec.com/training/">Training</a></p>
+                        <p><a href="https://sybiltec.com/website-design/">Web Design</a></p>
+                        <p><a href="https://sybiltec.com/web-design-bexley/">Web Design Bexley</a></p>
+                        <p><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></p>
+                        <p><a href="https://sybiltec.com/website-review/">Website Review</a></p>
                     </div>
                     <div class="col-3">
                         <div class="ml-form-embed"
