--- a/web-design-bexley.html
+++ b/web-design-bexley.html
@@ -1,3 +1,6 @@
+---
+permalink: /web-design-bexley/
+---
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -31,12 +34,12 @@
         <title>Web Design for Bexley Small Businesses and SMEs | Sybiltec</title>       
         <meta name="Description" content="Offering subsidised web design services for small businesses in Bexley via the Talking Business programme. Contact us about website support.">
         <meta name="robots" content="all">
-        <link rel="canonical" href="https://sybiltec.com/web-design-bexley">
+        <link rel="canonical" href="https://sybiltec.com/web-design-bexley/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Web Design for Bexley Small Businesses and SMEs | Sybiltec" />
         <meta property="og:description" content="Offering subsidised web design services for small businesses in Bexley via the Talking Business programme. Contact us about website support." />
-        <meta property="og:url" content="https://sybiltec.com/web-design-bexley" />
+        <meta property="og:url" content="https://sybiltec.com/web-design-bexley/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/web-design-bexley.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -116,7 +119,7 @@
     </head>
     <body>
         <div class="announcement-bar">
-            <a href="https://sybiltec.com/web-design-bexley">Click Here for Subsidised Web Design Services for Bexley Businesses</a>
+            <a href="https://sybiltec.com/web-design-bexley/">Click Here for Subsidised Web Design Services for Bexley Businesses</a>
         </div>
         <div class="header">
                 <div class="container-1140">
@@ -130,12 +133,12 @@
                             <div class="nav">
                                     <div class="topnav" id="myTopnav">
                                         <a href="/">Home</a>
-                                        <a href="https://sybiltec.com/about">About</a>
-                                        <a href="https://sybiltec.com/services">Services</a>
-                                        <a href="https://sybiltec.com/clients">Clients</a>
-                                        <a href="https://sybiltec.com/faqs">FAQs</a>
-                                        <a href="https://sybiltec.com/blog">Blog</a>
-                                        <a href="https://sybiltec.com/contact">Contact</a>
+                                        <a href="https://sybiltec.com/about/">About</a>
+                                        <a href="https://sybiltec.com/services/">Services</a>
+                                        <a href="https://sybiltec.com/clients/">Clients</a>
+                                        <a href="https://sybiltec.com/faqs/">FAQs</a>
+                                        <a href="https://sybiltec.com/blog/">Blog</a>
+                                        <a href="https://sybiltec.com/contact/">Contact</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
                                         </a>
@@ -438,7 +441,7 @@
                 </div>
 
                 <h2>Web Design Help for non-Bexley Businesses</h2>
-                <p>Do you need web design or development services but your business is based outside of Bexley? Please see the <a href="https://sybiltec.com/website-design">Small Business Web Design</a> page to find out what support is available.</p>
+                <p>Do you need web design or development services but your business is based outside of Bexley? Please see the <a href="https://sybiltec.com/website-design/">Small Business Web Design</a> page to find out what support is available.</p>
             </div>
         </div>
         <div class="contact section">
@@ -449,7 +452,7 @@
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
                     </div>
                 </div>
                 </div>
@@ -460,20 +463,20 @@
                     <div class="col-3">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="https://sybiltec.com/about">About</a></p>
-                        <p><a href="https://sybiltec.com/contact">Contact</a></p>
-                        <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybiltec.com/privacy-notice">Privacy Notice</a></p>
-                        <p><a href="https://sybiltec.com/sitemap">Sitemap</a></p>
+                        <p><a href="https://sybiltec.com/about/">About</a></p>
+                        <p><a href="https://sybiltec.com/contact/">Contact</a></p>
+                        <p><a href="https://sybiltec.com/terms-and-conditions/">Terms and Conditions</a></p>
+                        <p><a href="https://sybiltec.com/privacy-notice/">Privacy Notice</a></p>
+                        <p><a href="https://sybiltec.com/sitemap/">Sitemap</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
-                        <p><a href="https://sybiltec.com/ecommerce-websites">E-commerce Websites</a></p>
-                        <p><a href="https://sybiltec.com/website-review">Website Review</a></p>
-                        <p><a href="https://sybiltec.com/website-design">Web Design</a></p>
-                        <p><a href="https://sybiltec.com/website-maintenance">Website Maintenance</a></p>
-                        <p><a href="https://sybiltec.com/training">Training</a></p>
-                        <p><a href="https://sybiltec.com/leaflet-design">Leaflet Design</a></p>
+                        <p><a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a></p>
+                        <p><a href="https://sybiltec.com/website-review/">Website Review</a></p>
+                        <p><a href="https://sybiltec.com/website-design/">Web Design</a></p>
+                        <p><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></p>
+                        <p><a href="https://sybiltec.com/training/">Training</a></p>
+                        <p><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></p>
                     </div>
                     <div class="col-3">
                         <div class="ml-form-embed"
