--- a/web-design-surrey.html
+++ b/web-design-surrey.html
@@ -1,3 +1,6 @@
+---
+permalink: /web-design-surrey/
+---
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -31,12 +34,12 @@
         <title>Web Design Services in Surrey | Sybiltec</title>       
         <meta name="Description" content="Web design and development services are available to Surrey small businesses. Contact us today to find out how we can elevate your online presence.">
         <meta name="robots" content="all">
-        <link rel="canonical" href="https://sybiltec.com/web-design-surrey">
+        <link rel="canonical" href="https://sybiltec.com/web-design-surrey/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Web Design Services in Surrey | Sybiltec" />
         <meta property="og:description" content="Web design and development services are available to Surrey small businesses. Contact us today to find out how we can elevate your online presence." />
-        <meta property="og:url" content="https://sybiltec.com/web-design-surrey" />
+        <meta property="og:url" content="https://sybiltec.com/web-design-surrey/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -127,12 +130,12 @@
                             <div class="nav">
                                     <div class="topnav" id="myTopnav">
                                         <a href="/">Home</a>
-                                        <a href="https://sybiltec.com/about">About</a>
-                                        <a href="https://sybiltec.com/services">Services</a>
-                                        <a href="https://sybiltec.com/clients">Clients</a>
-                                        <a href="https://sybiltec.com/faqs">FAQs</a>
-                                        <a href="https://sybiltec.com/blog">Blog</a>
-                                        <a href="https://sybiltec.com/contact">Contact</a>
+                                        <a href="https://sybiltec.com/about/">About</a>
+                                        <a href="https://sybiltec.com/services/">Services</a>
+                                        <a href="https://sybiltec.com/clients/">Clients</a>
+                                        <a href="https://sybiltec.com/faqs/">FAQs</a>
+                                        <a href="https://sybiltec.com/blog/">Blog</a>
+                                        <a href="https://sybiltec.com/contact/">Contact</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
                                         </a>
@@ -189,7 +192,7 @@
 
                 <div class="testimonials section grey padding-top padding-bottom center">
                     <h2>Ready to Get Started?</h2>
-                    <div class="padding-top padding-bottom"><a class="btn-primary" href="https://sybiltec.com/contact">Contact Us Today!</a></div>
+                    <div class="padding-top padding-bottom"><a class="btn-primary" href="https://sybiltec.com/contact/">Contact Us Today!</a></div>
                 </div>
 
                 <div class="main section">
@@ -246,7 +249,7 @@
                 </div>
 
                 <h2>How the Web Design Process Works</h2>
-                <p><a href="https://sybiltec.com/contact">Contact us</a> today to arrange a free initial consultation. During the consultation, we'll ask you some questions about your business and your reason for needing our website services. It's also a chance for you to ask us anything and determine if we are a good fit for each other. If you would like to take things further, we'll arrange a longer, in-depth conversation to understand your business and requirements in more detail.</p>
+                <p><a href="https://sybiltec.com/contact/">Contact us</a> today to arrange a free initial consultation. During the consultation, we'll ask you some questions about your business and your reason for needing our website services. It's also a chance for you to ask us anything and determine if we are a good fit for each other. If you would like to take things further, we'll arrange a longer, in-depth conversation to understand your business and requirements in more detail.</p>
 
                 <p>If after this stage you are interested in commissioning our web design services, you'll be sent a quotation and an agreement which outlines the work to be carried out and the associated fees. There are no hidden charges, so you can be sure that the price quoted to you will be the price you pay.</p>
 
@@ -256,7 +259,7 @@
 
                 <p>When we agree on the final version of the designs, your website will be built on the most suitable platform, whether that is WordPress, Wix or Shopify. Finally, we will carry out thorough testing of the website to ensure that all functions are working correctly before launch.</p> 
 
-                <p>For further information on the website design process, please read the article <a href="https://sybiltec.com/web-design-process-explained-12-easy-steps">The Web Design Process Explained in 12 Easy Steps</a>.</p>
+                <p>For further information on the website design process, please read the article <a href="https://sybiltec.com/web-design-process-explained-12-easy-steps/">The Web Design Process Explained in 12 Easy Steps</a>.</p>
             </div>
         </div>
         <div class="contact section">
@@ -267,7 +270,7 @@
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
                     </div>
                 </div>
                 </div>
@@ -278,20 +281,20 @@
                     <div class="col-3">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="https://sybiltec.com/about">About</a></p>
-                        <p><a href="https://sybiltec.com/contact">Contact</a></p>
-                        <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybiltec.com/privacy-notice">Privacy Notice</a></p>
-                        <p><a href="https://sybiltec.com/sitemap">Sitemap</a></p>
+                        <p><a href="https://sybiltec.com/about/">About</a></p>
+                        <p><a href="https://sybiltec.com/contact/">Contact</a></p>
+                        <p><a href="https://sybiltec.com/terms-and-conditions/">Terms and Conditions</a></p>
+                        <p><a href="https://sybiltec.com/privacy-notice/">Privacy Notice</a></p>
+                        <p><a href="https://sybiltec.com/sitemap/">Sitemap</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
-                        <p><a href="https://sybiltec.com/ecommerce-websites">E-commerce Websites</a></p>
-                        <p><a href="https://sybiltec.com/website-review">Website Review</a></p>
-                        <p><a href="https://sybiltec.com/website-design">Web Design</a></p>
-                        <p><a href="https://sybiltec.com/website-maintenance">Website Maintenance</a></p>
-                        <p><a href="https://sybiltec.com/training">Training</a></p>
-                        <p><a href="https://sybiltec.com/leaflet-design">Leaflet Design</a></p>
+                        <p><a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a></p>
+                        <p><a href="https://sybiltec.com/website-review/">Website Review</a></p>
+                        <p><a href="https://sybiltec.com/website-design/">Web Design</a></p>
+                        <p><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></p>
+                        <p><a href="https://sybiltec.com/training/">Training</a></p>
+                        <p><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></p>
                     </div>
                     <div class="col-3">
                         <div class="ml-form-embed"
