--- a/website-design.html
+++ b/website-design.html
@@ -1,3 +1,6 @@
+---
+permalink: /website-design/
+---
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -31,12 +34,12 @@
         <title>Web Design for Small Businesses, SMEs and Startups | Sybiltec</title>       
         <meta name="Description" content="Small businesses, SMEs, startups and charities can benefit from bespoke web design services offered by Sybiltec. Contact me today for a free consultation.">
         <meta name="robots" content="all">
-        <link rel="canonical" href="https://sybiltec.com/website-design">
+        <link rel="canonical" href="https://sybiltec.com/website-design/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Web Design for Small Businesses, SMEs and Startups | Sybiltec" />
         <meta property="og:description" content="Small businesses, SMEs, startups and charities can benefit from bespoke web design services offered by Sybiltec. Contact me today for a free consultation." />
-        <meta property="og:url" content="https://sybiltec.com/website-design" />
+        <meta property="og:url" content="https://sybiltec.com/website-design/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -116,7 +119,7 @@
     </head>
     <body>
         <div class="announcement-bar">
-            <a href="https://sybiltec.com/web-design-bexley">Click Here for Subsidised Web Design Services for Bexley Businesses</a>
+            <a href="https://sybiltec.com/web-design-bexley/">Click Here for Subsidised Web Design Services for Bexley Businesses</a>
         </div>
         <div class="header">
                 <div class="container-1140">
@@ -130,12 +133,12 @@
                             <div class="nav">
                                     <div class="topnav" id="myTopnav">
                                         <a href="/">Home</a>
-                                        <a href="https://sybiltec.com/about">About</a>
-                                        <a href="https://sybiltec.com/services">Services</a>
-                                        <a href="https://sybiltec.com/clients">Clients</a>
-                                        <a href="https://sybiltec.com/faqs">FAQs</a>
-                                        <a href="https://sybiltec.com/blog">Blog</a>
-                                        <a href="https://sybiltec.com/contact">Contact</a>
+                                        <a href="https://sybiltec.com/about/">About</a>
+                                        <a href="https://sybiltec.com/services/">Services</a>
+                                        <a href="https://sybiltec.com/clients/">Clients</a>
+                                        <a href="https://sybiltec.com/faqs/">FAQs</a>
+                                        <a href="https://sybiltec.com/blog/">Blog</a>
+                                        <a href="https://sybiltec.com/contact/">Contact</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
                                         </a>
@@ -187,7 +190,7 @@
                 <h2>The Process</h2>
                 <p>Firstly, your requirements will be gathered. This is a very important step in the process, as it helps me (and you) to understand your business goals and what you hope to achieve by building a website. By working on this step together, I can create a stategy which best meets your needs.</p>
 
-                <p>We will work together to create a design for your new website. It helps if you have an idea of the colours, fonts, look and feel of the site and content, but if not, don't worry! I will take you through the process of creating suitable designs that reflect your business's values. I will present the website designs to you via a <a href="https://www.figma.com/" target="_blank" rel="noopener noreferrer">Figma</a> link - this is a prototype which you can interact with, and which looks similar to the actual website to be developed. Once you are happy with the designs, I will proceed to the next step of building your website on your chosen platform (Wix, WordPress or Shopify). For more information about the web design process, please refer to my blog post, <a href="https://sybiltec.com/web-design-process-explained-12-easy-steps">The Web Design Process Explained in 12 Easy Steps</a>.</p>
+                <p>We will work together to create a design for your new website. It helps if you have an idea of the colours, fonts, look and feel of the site and content, but if not, don't worry! I will take you through the process of creating suitable designs that reflect your business's values. I will present the website designs to you via a <a href="https://www.figma.com/" target="_blank" rel="noopener noreferrer">Figma</a> link - this is a prototype which you can interact with, and which looks similar to the actual website to be developed. Once you are happy with the designs, I will proceed to the next step of building your website on your chosen platform (Wix, WordPress or Shopify). For more information about the web design process, please refer to my blog post, <a href="https://sybiltec.com/web-design-process-explained-12-easy-steps/">The Web Design Process Explained in 12 Easy Steps</a>.</p>
 
                 <h2>Web Design Clients</h2>
                 <p>Take a look at the examples below of websites I have designed for past clients. All of these clients benefitted from a bespoke website design which allowed the businesses to showcase their products and services at their best.</p>
@@ -377,7 +380,7 @@
                     <li>Barnehurst</li>
                     <li>Beckenham</li>
                     <li>Belvedere</li>
-                    <li><a href="https://sybiltec.com/web-design-bexley">Bexley</a></li>
+                    <li><a href="https://sybiltec.com/web-design-bexley/">Bexley</a></li>
                     <li>Bexleyheath</li>
                     <li>Blackheath</li>
                     <li>Blackfen</li>
@@ -401,7 +404,7 @@
                 <h2>Additional Areas Covered</h2>
                 <ul>
                     <li>Kent</li>
-                    <li><a href="https://sybiltec.com/web-design-surrey">Surrey</a></li>
+                    <li><a href="https://sybiltec.com/web-design-surrey/">Surrey</a></li>
                 </ul>
             </div>
         </div>
@@ -413,7 +416,7 @@
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
                     </div>
                 </div>
                 </div>
@@ -424,20 +427,20 @@
                     <div class="col-3">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="https://sybiltec.com/about">About</a></p>
-                        <p><a href="https://sybiltec.com/contact">Contact</a></p>
-                        <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybiltec.com/privacy-notice">Privacy Notice</a></p>
-                        <p><a href="https://sybiltec.com/sitemap">Sitemap</a></p>
+                        <p><a href="https://sybiltec.com/about/">About</a></p>
+                        <p><a href="https://sybiltec.com/contact/">Contact</a></p>
+                        <p><a href="https://sybiltec.com/terms-and-conditions/">Terms and Conditions</a></p>
+                        <p><a href="https://sybiltec.com/privacy-notice/">Privacy Notice</a></p>
+                        <p><a href="https://sybiltec.com/sitemap/">Sitemap</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
-                        <p><a href="https://sybiltec.com/ecommerce-websites">E-commerce Websites</a></p>
-                        <p><a href="https://sybiltec.com/website-review">Website Review</a></p>
-                        <p><a href="https://sybiltec.com/website-design">Web Design</a></p>
-                        <p><a href="https://sybiltec.com/website-maintenance">Website Maintenance</a></p>
-                        <p><a href="https://sybiltec.com/training">Training</a></p>
-                        <p><a href="https://sybiltec.com/leaflet-design">Leaflet Design</a></p>
+                        <p><a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a></p>
+                        <p><a href="https://sybiltec.com/website-review/">Website Review</a></p>
+                        <p><a href="https://sybiltec.com/website-design/">Web Design</a></p>
+                        <p><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></p>
+                        <p><a href="https://sybiltec.com/training/">Training</a></p>
+                        <p><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></p>
                     </div>
                     <div class="col-3">
                         <div class="ml-form-embed"
