--- a/website-maintenance.html
+++ b/website-maintenance.html
@@ -1,3 +1,6 @@
+---
+permalink: /website-maintenance/
+---
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -31,12 +34,12 @@
         <title>Website Maintenance Services in London | Sybiltec</title>       
         <meta name="Description" content="Your website should be constantly adapting and evolving as your business grows. Looking for website maintenance services in London? Purchase a package today.">
         <meta name="robots" content="all">
-        <link rel="canonical" href="https://sybiltec.com/website-maintenance">
+        <link rel="canonical" href="https://sybiltec.com/website-maintenance/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Website Maintenance Services in London | Sybiltec" />
         <meta property="og:description" content="Your website should be constantly adapting and evolving as your business grows. Looking for website maintenance services in London? Purchase a package today." />
-        <meta property="og:url" content="https://sybiltec.com/website-maintenance" />
+        <meta property="og:url" content="https://sybiltec.com/website-maintenance/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -116,7 +119,7 @@
     </head>
     <body>
         <div class="announcement-bar">
-            <a href="https://sybiltec.com/web-design-bexley">Click Here for Subsidised Web Design Services for Bexley Businesses</a>
+            <a href="https://sybiltec.com/web-design-bexley/">Click Here for Subsidised Web Design Services for Bexley Businesses</a>
         </div>
         <div class="header">
                 <div class="container-1140">
@@ -130,12 +133,12 @@
                             <div class="nav">
                                     <div class="topnav" id="myTopnav">
                                         <a href="/">Home</a>
-                                        <a href="https://sybiltec.com/about">About</a>
-                                        <a href="https://sybiltec.com/services">Services</a>
-                                        <a href="https://sybiltec.com/clients">Clients</a>
-                                        <a href="https://sybiltec.com/faqs">FAQs</a>
-                                        <a href="https://sybiltec.com/blog">Blog</a>
-                                        <a href="https://sybiltec.com/contact">Contact</a>
+                                        <a href="https://sybiltec.com/about/">About</a>
+                                        <a href="https://sybiltec.com/services/">Services</a>
+                                        <a href="https://sybiltec.com/clients/">Clients</a>
+                                        <a href="https://sybiltec.com/faqs/">FAQs</a>
+                                        <a href="https://sybiltec.com/blog/">Blog</a>
+                                        <a href="https://sybiltec.com/contact/">Contact</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
                                         </a>
@@ -170,7 +173,7 @@
                 <p>Please provide us with the text you wish to be added in a Word document. If you can include the images too, that would be really helpful, however, we can source the images if you are finding this difficult. Don't worry about the layout, as we will create a design for the page that is consistent with the rest of your website. We'll proofread your content too.</p>
                 <h3>Installing/updating apps and plugins</h3>
                 <p>For all platforms (Shopify, WordPress and Wix), we'll help you with installing and configuring any apps that you require.</p>
-                <p>In particular, if you own a WordPress site, you're probably aware that the plugins, themes and WordPress files must be kept updated. We can perform monthly backups and updates for you. Please read our blog posts for information on the processes we use for <a href="https://sybiltec.com/backup-wordpress-website-using-updraftplus">backing up</a> and <a href="https://sybiltec.com/guide-to-updating-your-wordpress-website">updating</a> a WordPress website.</p>
+                <p>In particular, if you own a WordPress site, you're probably aware that the plugins, themes and WordPress files must be kept updated. We can perform monthly backups and updates for you. Please read our blog posts for information on the processes we use for <a href="https://sybiltec.com/backup-wordpress-website-using-updraftplus/">backing up</a> and <a href="https://sybiltec.com/guide-to-updating-your-wordpress-website/">updating</a> a WordPress website.</p>
                 <h3>Theme customisations</h3>
                 <p>If you need to make some adjustments to your theme which may require changes to the code, we can make the edits for you (applicable to Shopify and WordPress websites).</p>
                 <h3>Maintaining your e-commerce store</h3>
@@ -178,7 +181,7 @@
                 <h3>SEO (search engine optimisation) tasks</h3>
                 <p>We will make some basic SEO improvements to your website, including page titles, meta descriptions and alt text, and we will monitor the performance of your website in Google Search Console. All techniques used comply with Google Search Essentials.</p>
             <h2>Choose Your Package</h2>
-            <p>If you are a business owner based in <strong>London</strong> or the surrounding areas, choose the <strong>website maintenance</strong> package below which closely matches your requirements. However, if none these are appropriate, please <a href="https://sybiltec.com/contact">contact us</a> and we will create a customised package for you.</p>
+            <p>If you are a business owner based in <strong>London</strong> or the surrounding areas, choose the <strong>website maintenance</strong> package below which closely matches your requirements. However, if none these are appropriate, please <a href="https://sybiltec.com/contact/">contact us</a> and we will create a customised package for you.</p>
             <div class="row">
                 <div class="col-4">
                     <div class="blog-card">       
@@ -302,7 +305,7 @@
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
                     </div>
                 </div>
                 </div>
@@ -313,20 +316,20 @@
                     <div class="col-3">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="https://sybiltec.com/about">About</a></p>
-                        <p><a href="https://sybiltec.com/contact">Contact</a></p>
-                        <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybiltec.com/privacy-notice">Privacy Notice</a></p>
-                        <p><a href="https://sybiltec.com/sitemap">Sitemap</a></p>
+                        <p><a href="https://sybiltec.com/about/">About</a></p>
+                        <p><a href="https://sybiltec.com/contact/">Contact</a></p>
+                        <p><a href="https://sybiltec.com/terms-and-conditions/">Terms and Conditions</a></p>
+                        <p><a href="https://sybiltec.com/privacy-notice/">Privacy Notice</a></p>
+                        <p><a href="https://sybiltec.com/sitemap/">Sitemap</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
-                        <p><a href="https://sybiltec.com/ecommerce-websites">E-commerce Websites</a></p>
-                        <p><a href="https://sybiltec.com/website-review">Website Review</a></p>
-                        <p><a href="https://sybiltec.com/website-design">Web Design</a></p>
-                        <p><a href="https://sybiltec.com/website-maintenance">Website Maintenance</a></p>
-                        <p><a href="https://sybiltec.com/training">Training</a></p>
-                        <p><a href="https://sybiltec.com/leaflet-design">Leaflet Design</a></p>
+                        <p><a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a></p>
+                        <p><a href="https://sybiltec.com/website-review/">Website Review</a></p>
+                        <p><a href="https://sybiltec.com/website-design/">Web Design</a></p>
+                        <p><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></p>
+                        <p><a href="https://sybiltec.com/training/">Training</a></p>
+                        <p><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></p>
                     </div>
                     <div class="col-3">
                         <div class="ml-form-embed"
