--- a/about.html
+++ b/about.html
@@ -1,3 +1,6 @@
+---
+permalink: /about/
+---
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -37,7 +40,7 @@
         <meta property="og:title" content="About | Web Designer Erith Bexley South East London | Sybiltec" />
         <meta property="og:description" content="Sybil Mayard is a freelance web developer. She 
         graduated from the University of Kent with an MSc in Computer Science. Read about her experiences here." />
-        <meta property="og:url" content="https://sybiltec.com/about" />
+        <meta property="og:url" content="https://sybiltec.com/about/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -112,13 +115,13 @@
         }
         }
         </script>
-        <link rel="canonical" href="https://sybiltec.com/about" />
+        <link rel="canonical" href="https://sybiltec.com/about/" />
         <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
     <body>
         <div class="announcement-bar">
-            <a href="https://sybiltec.com/web-design-bexley">Click Here for Subsidised Web Design Services for Bexley Businesses</a>
+            <a href="https://sybiltec.com/web-design-bexley/">Click Here for Subsidised Web Design Services for Bexley Businesses</a>
         </div>
         <div class="header">
                 <div class="container-1140">
@@ -132,12 +135,12 @@
                             <div class="nav">
                                     <div class="topnav" id="myTopnav">
                                         <a href="/">Home</a>
-                                        <a href="https://sybiltec.com/about">About</a>
-                                        <a href="https://sybiltec.com/services">Services</a>
-                                        <a href="https://sybiltec.com/clients">Clients</a>
-                                        <a href="https://sybiltec.com/faqs">FAQs</a>
-                                        <a href="https://sybiltec.com/blog">Blog</a>
-                                        <a href="https://sybiltec.com/contact">Contact</a>
+                                        <a href="https://sybiltec.com/about/">About</a>
+                                        <a href="https://sybiltec.com/services/">Services</a>
+                                        <a href="https://sybiltec.com/clients/">Clients</a>
+                                        <a href="https://sybiltec.com/faqs/">FAQs</a>
+                                        <a href="https://sybiltec.com/blog/">Blog</a>
+                                        <a href="https://sybiltec.com/contact/">Contact</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
                                         </a>
@@ -168,7 +171,7 @@
                 <h2>About Sybil</h2>
                 <hr class="left-align">
 
-                <p>Thank you for visiting my website. My name is Sybil Mayard. I founded Sybiltec in 2020 with a mission to make web design and development services more accessible and affordable to all, especially small businesses. Four years later, I'm proud to say that I've worked with several SMEs from various industry sectors to help them achieve their digital goals. My main services include websites for small businesses, <a href="https://sybiltec.com/ecommerce-websites">e-commerce websites</a>, and online learning platforms.</p>
+                <p>Thank you for visiting my website. My name is Sybil Mayard. I founded Sybiltec in 2020 with a mission to make web design and development services more accessible and affordable to all, especially small businesses. Four years later, I'm proud to say that I've worked with several SMEs from various industry sectors to help them achieve their digital goals. My main services include websites for small businesses, <a href="https://sybiltec.com/ecommerce-websites/">e-commerce websites</a>, and online learning platforms.</p>
 
                 <p>Current clients include the <a href="https://techdiplomacy.org" target="_blank" rel="noreferrer noopener">Krach Institute for Tech Diplomacy at Purdue</a>, where I am involved in designing and building an online portal for the new Tech Diplomacy Academy project which will be launching soon. I am also pleased to be working together with CNT Associates to deliver the Bexley Talking Business programme in association with the London Borough of Bexley and fully funded by the UK Shared Prosperity Fund.</p>
 
@@ -179,12 +182,12 @@
                     <li>Junior Analyst at Capacitas</li>
                 </ul>
 
-                <p>I am also the founder of VidCareer. It's a start-up idea which began during my Masters course, and is an online platform for connecting small businesses with candidates through virtual career events, saving time and money. For more information about VidCareer and my other projects, please explore the <a href="https://sybiltec.com/projects">Projects</a> page.</p>
+                <p>I am also the founder of VidCareer. It's a start-up idea which began during my Masters course, and is an online platform for connecting small businesses with candidates through virtual career events, saving time and money. For more information about VidCareer and my other projects, please explore the <a href="https://sybiltec.com/projects/">Projects</a> page.</p>
 
                 <p>Click the button below to find out how I can help take your business to the next level.</p>
                 
                 <div class="padding-top padding-bottom">
-                    <a href="https://sybiltec.com/contact" class="btn-primary">Contact me</a>
+                    <a href="https://sybiltec.com/contact/" class="btn-primary">Contact me</a>
                 </div>
 
                 <div class="center">
@@ -284,7 +287,7 @@
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
                     </div>
                 </div>
                 </div>
@@ -295,20 +298,20 @@
                     <div class="col-3">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="https://sybiltec.com/about">About</a></p>
-                        <p><a href="https://sybiltec.com/contact">Contact</a></p>
-                        <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybiltec.com/privacy-notice">Privacy Notice</a></p>
-                        <p><a href="https://sybiltec.com/sitemap">Sitemap</a></p>
+                        <p><a href="https://sybiltec.com/about/">About</a></p>
+                        <p><a href="https://sybiltec.com/contact/">Contact</a></p>
+                        <p><a href="https://sybiltec.com/terms-and-conditions/">Terms and Conditions</a></p>
+                        <p><a href="https://sybiltec.com/privacy-notice/">Privacy Notice</a></p>
+                        <p><a href="https://sybiltec.com/sitemap/">Sitemap</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
-                        <p><a href="https://sybiltec.com/ecommerce-websites">E-commerce Websites</a></p>
-                        <p><a href="https://sybiltec.com/website-review">Website Review</a></p>
-                        <p><a href="https://sybiltec.com/website-design">Web Design</a></p>
-                        <p><a href="https://sybiltec.com/website-maintenance">Website Maintenance</a></p>
-                        <p><a href="https://sybiltec.com/training">Training</a></p>
-                        <p><a href="https://sybiltec.com/leaflet-design">Leaflet Design</a></p>
+                        <p><a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a></p>
+                        <p><a href="https://sybiltec.com/website-review/">Website Review</a></p>
+                        <p><a href="https://sybiltec.com/website-design/">Web Design</a></p>
+                        <p><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></p>
+                        <p><a href="https://sybiltec.com/training/">Training</a></p>
+                        <p><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></p>
                     </div>
                     <div class="col-3">
                         <div class="ml-form-embed"
