--- a/blog-3.html
+++ b/blog-3.html
@@ -1,3 +1,6 @@
+---
+permalink: /blog-3/
+---
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -31,12 +34,12 @@
         <title>Blog Page 3 | Web Designer in South East London</title>       
         <meta name="Description" content="Sybiltec is a freelance web designer supporting small business owners in South East London. Read my articles for tips and advice on web design issues.">
         <meta name="robots" content="noindex">
-        <link rel="canonical" href="https://sybiltec.com/blog-3">
+        <link rel="canonical" href="https://sybiltec.com/blog-3/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Blog Page 3 | Web Designer in Bexley, South East London" />
         <meta property="og:description" content="Sybiltec is a freelance web designer supporting small business owners in South East London. Read my articles for tips and advice on web design issues." />
-        <meta property="og:url" content="https://sybiltec.com/blog-3" />
+        <meta property="og:url" content="https://sybiltec.com/blog-3/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -116,7 +119,7 @@
     </head>
     <body>
         <div class="announcement-bar">
-            <a href="https://sybiltec.com/web-design-bexley">Click Here for Subsidised Web Design Services for Bexley Businesses</a>
+            <a href="https://sybiltec.com/web-design-bexley/">Click Here for Subsidised Web Design Services for Bexley Businesses</a>
         </div>
         <div class="header">
                 <div class="container-1140">
@@ -130,12 +133,12 @@
                             <div class="nav">
                                     <div class="topnav" id="myTopnav">
                                         <a href="/">Home</a>
-                                        <a href="https://sybiltec.com/about">About</a>
-                                        <a href="https://sybiltec.com/services">Services</a>
-                                        <a href="https://sybiltec.com/clients">Clients</a>
-                                        <a href="https://sybiltec.com/faqs">FAQs</a>
-                                        <a href="https://sybiltec.com/blog">Blog</a>
-                                        <a href="https://sybiltec.com/contact">Contact</a>
+                                        <a href="https://sybiltec.com/about/">About</a>
+                                        <a href="https://sybiltec.com/services/">Services</a>
+                                        <a href="https://sybiltec.com/clients/">Clients</a>
+                                        <a href="https://sybiltec.com/faqs/">FAQs</a>
+                                        <a href="https://sybiltec.com/blog/">Blog</a>
+                                        <a href="https://sybiltec.com/contact/">Contact</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
                                         </a>
@@ -165,32 +168,32 @@
                     <h2>How Does a Good Website Showcase Trust?</h2>
                     <p>According to our recent LinkedIn poll, 95% of respondents indicated that "good websites showcase trust." But what exactly constitutes a trustworthy website? In this blog post, we examine six key factors you need to consider when developing a well-designed and compliant website. …</p>
                     <br>
-                    <a class="btn-primary" class="btn-primary" href="https://sybiltec.com/how-does-a-good-website-showcase-trust">Create a Trustworthy Website</a>
+                    <a class="btn-primary" class="btn-primary" href="https://sybiltec.com/how-does-a-good-website-showcase-trust/">Create a Trustworthy Website</a>
                 <div class="padding-top">
                     <h2>Cyber Security Best Practices for You and Your Business</h2>
                     <p>Cybercrime is constantly on the rise; make sure to keep yourself, your business and your customers safe by following the tips in this blog. By following good cyber security practices, you can enjoy a safe and secure experience both online and offline. Click on any image a to view a larger version. …</p>
                     <br>
-                    <a class="btn-primary" class="btn-primary" href="https://sybiltec.com/cyber-security-best-practices-for-business">Cyber Security Practices</a>
+                    <a class="btn-primary" class="btn-primary" href="https://sybiltec.com/cyber-security-best-practices-for-business/">Cyber Security Practices</a>
                 </div>
                 <div class="padding-top">
                     <h2>7 Reasons Why You Should be Using Shopify</h2>
                     <p>Are you planning to sell your products or services online? Consider choosing Shopify, one of the most popular e-commerce platforms. Here I present to you a few of the benefits you can enjoy. Customisable Themes Coding and design skills are not necessary to make your store look unique and fabulous! Shopify offers a selection of …</p>
                         <br>
-                        <a class="btn-primary" href="https://sybiltec.com/6-reasons-to-use-shopify">Use Shopify Now</a>
+                        <a class="btn-primary" href="https://sybiltec.com/6-reasons-to-use-shopify/">Use Shopify Now</a>
                 </div>
                 <div class="padding-top">
                     <h2>5 Best Tools for Remote Working</h2>
                     <p>With an overwhelming amount of tools available today, it can be a difficult task finding the best ones, especially if you are unfamiliar with working from home. Here I present to you a summary of my 5 favourite tools for remote working, all of which are available for free. Of course, I can't go into …</p>
                         <br>
-                        <a class="btn-primary" href="https://sybiltec.com/5-best-tools-for-remote-working">Remote Working Tools</a>
+                        <a class="btn-primary" href="https://sybiltec.com/5-best-tools-for-remote-working/">Remote Working Tools</a>
                 </div>
                 <div class="padding-top padding-bottom">
                     <h2>6 Tips for Surviving Remote Working</h2>
                     <p>Love it or loathe it, working remotely may not be for everyone but due to the current pandemic it's essential that work is carried out from home where possible. Read on to find out how you can WFH (work from home) more effectively. Optimise Your Technology Get a reliable internet connection. If possible, use an …</p>
                         <br>
-                        <a class="btn-primary" href="https://sybiltec.com/6-tips-for-surviving-remote-working">Survive Remote Working</a>
+                        <a class="btn-primary" href="https://sybiltec.com/6-tips-for-surviving-remote-working/">Survive Remote Working</a>
                 </div>
-                <div class="center padding-top padding-bottom"><a href="https://sybiltec.com/blog-2">Page 2</a></div>
+                <div class="center padding-top padding-bottom"><a href="https://sybiltec.com/blog-2/">Page 2</a></div>
             </div>
         </div>
         <div class="contact section">
@@ -201,7 +204,7 @@
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
                     </div>
                 </div>
                 </div>
@@ -212,20 +215,20 @@
                     <div class="col-3">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="https://sybiltec.com/about">About</a></p>
-                        <p><a href="https://sybiltec.com/contact">Contact</a></p>
-                        <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybiltec.com/privacy-notice">Privacy Notice</a></p>
-                        <p><a href="https://sybiltec.com/sitemap">Sitemap</a></p>
+                        <p><a href="https://sybiltec.com/about/">About</a></p>
+                        <p><a href="https://sybiltec.com/contact/">Contact</a></p>
+                        <p><a href="https://sybiltec.com/terms-and-conditions/">Terms and Conditions</a></p>
+                        <p><a href="https://sybiltec.com/privacy-notice/">Privacy Notice</a></p>
+                        <p><a href="https://sybiltec.com/sitemap/">Sitemap</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
-                        <p><a href="https://sybiltec.com/ecommerce-websites">E-commerce Websites</a></p>
-                        <p><a href="https://sybiltec.com/website-review">Website Review</a></p>
-                        <p><a href="https://sybiltec.com/website-design">Web Design</a></p>
-                        <p><a href="https://sybiltec.com/website-maintenance">Website Maintenance</a></p>
-                        <p><a href="https://sybiltec.com/training">Training</a></p>
-                        <p><a href="https://sybiltec.com/leaflet-design">Leaflet Design</a></p>
+                        <p><a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a></p>
+                        <p><a href="https://sybiltec.com/website-review/">Website Review</a></p>
+                        <p><a href="https://sybiltec.com/website-design/">Web Design</a></p>
+                        <p><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></p>
+                        <p><a href="https://sybiltec.com/training/">Training</a></p>
+                        <p><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></p>
                     </div>
                     <div class="col-3">
                         <div class="ml-form-embed"
