--- a/blog.html
+++ b/blog.html
@@ -1,3 +1,6 @@
+---
+permalink: /blog/
+---
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -31,12 +34,12 @@
         <title>Blog | Web Designer Erith South East London | Sybiltec</title>       
         <meta name="Description" content="Sybiltec provides website design services in the South East London areaa. Read my blog posts to keep yourself updated with industry news and company updates.">
         <meta name="robots" content="noindex">
-        <link rel="canonical" href="https://sybiltec.com/blog">
+        <link rel="canonical" href="https://sybiltec.com/blog/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Blog | Web Designer Erith Bexley South East London | Sybiltec" />
         <meta property="og:description" content="Sybiltec provides website design services in the South East London areaa. Read my blog posts to keep yourself updated with industry news and company updates." />
-        <meta property="og:url" content="https://sybiltec.com/blog" />
+        <meta property="og:url" content="https://sybiltec.com/blog/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -116,7 +119,7 @@
     </head>
     <body>
         <div class="announcement-bar">
-            <a href="https://sybiltec.com/web-design-bexley">Click Here for Subsidised Web Design Services for Bexley Businesses</a>
+            <a href="https://sybiltec.com/web-design-bexley/">Click Here for Subsidised Web Design Services for Bexley Businesses</a>
         </div>
         <div class="header">
                 <div class="container-1140">
@@ -130,12 +133,12 @@
                             <div class="nav">
                                     <div class="topnav" id="myTopnav">
                                         <a href="/">Home</a>
-                                        <a href="https://sybiltec.com/about">About</a>
-                                        <a href="https://sybiltec.com/services">Services</a>
-                                        <a href="https://sybiltec.com/clients">Clients</a>
-                                        <a href="https://sybiltec.com/faqs">FAQs</a>
-                                        <a href="https://sybiltec.com/blog">Blog</a>
-                                        <a href="https://sybiltec.com/contact">Contact</a>
+                                        <a href="https://sybiltec.com/about/">About</a>
+                                        <a href="https://sybiltec.com/services/">Services</a>
+                                        <a href="https://sybiltec.com/clients/">Clients</a>
+                                        <a href="https://sybiltec.com/faqs/">FAQs</a>
+                                        <a href="https://sybiltec.com/blog/">Blog</a>
+                                        <a href="https://sybiltec.com/contact/">Contact</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
                                         </a>
@@ -165,56 +168,56 @@
                 <h2>8 Ways to Speed Up Your Windows PC</h2>
                     <p>It can be frustrating to deal with a slow computer. But if you're tempted to throw it away, first consider these 8 things you can try in order to speed it up! …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/ways-to-speed-up-your-windows-pc">Speed Up My PC</a>
+                    <a class="btn-primary" href="https://sybiltec.com/ways-to-speed-up-your-windows-pc/">Speed Up My PC</a>
                 <div class="padding-top">
                     <h2>9 Ways to Improve the UX (User Experience) of Your Website</h2>
                     <p>User experience (or UX) is all about how your website visitors feel when they are browsing your website. Is it a positive or negative experience? Do they feel happy and satisfied, or angry and frustrated? Read the article for 8 ways to improve your website's user experience. …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/user-experience-ux">Improve My UX</a>
+                    <a class="btn-primary" href="https://sybiltec.com/user-experience-ux/">Improve My UX</a>
                 </div>
                 <div class="padding-top">
                     <h2>Accessible Design: Creating an Inclusive Website</h2>
                     <p>Designing an accessible website means creating web content that's usable for all types of users, including those with impairments and disabilities. Read the article for simple tips on how to make your website more accessible …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/accessible-website-design">Accessible Website Design</a>
+                    <a class="btn-primary" href="https://sybiltec.com/accessible-website-design/">Accessible Website Design</a>
                 </div>
                 <div class="padding-top">
                     <h2>How to Use Google Search Console: a Quick Guide</h2>
                     <p>Improving your website's SEO begins with understanding the search performace of your site. Read this guide on how to create a property, view your metrics, fix page indexing issues and more. …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/google-search-console">Use Google Search Console</a>
+                    <a class="btn-primary" href="https://sybiltec.com/google-search-console/">Use Google Search Console</a>
                 </div>
                 <div class="padding-top">
                     <h2>10 Best Free WordPress Plugins</h2>
                     <p>WordPress is one of the most popular website builder platforms on the internet. One reason why is the vast selection of plugins available, allowing you to build almost anything you can imagine. WordPress provides you with the essential tools you need to create a blog, but unless you are building a very basic site, you will need at least a few plugins to give you those additional functionalities. …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/best-free-wordpress-plugins">Best WordPress Plugins</a>
+                    <a class="btn-primary" href="https://sybiltec.com/best-free-wordpress-plugins/">Best WordPress Plugins</a>
                 </div>
                 <div class="padding-top">
                     <h2>10 Common Website Mistakes and How to Avoid Them</h2>
                     <p>Having analysed a huge number of websites over the past few years, I've noticed that a few mistakes tend to appear again and again. Have a read of the following article and make sure you aren't making the same mistakes on your website. …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/common-website-mistakes">Avoid the Mistakes</a>
+                    <a class="btn-primary" href="https://sybiltec.com/common-website-mistakes/">Avoid the Mistakes</a>
                 </div>
                 <div class="padding-top">
                     <h2>How to Choose a Web Designer</h2>
                     <p>Building a website may be a daunting task if you've never done it before or you don't have the time and/or skills to do it. Hiring a professional may be the best option, but with so much choice, it's difficult to find the right person for the job. Read this post to find out how you can choose the best web designer for your project. …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/how-to-choose-web-designer">Choose a Web Designer</a>
+                    <a class="btn-primary" href="https://sybiltec.com/how-to-choose-web-designer/">Choose a Web Designer</a>
                 </div>
                 <div class="padding-top">
                     <h2>How to Improve the SEO of Your Website</h2>
                         <p>One of the most effective ways to increase traffic to your website is through search, so after you've launched your website, the next step is to work on the SEO (search engine optimisation) of your site, helping it to rank in the highest possible position in search engine results pages (SERPs). …</p>
                         <br>
-                        <a class="btn-primary" href="https://sybiltec.com/improve-website-seo">Improve My SEO</a>
+                        <a class="btn-primary" href="https://sybiltec.com/improve-website-seo/">Improve My SEO</a>
                 </div>
                 <div class="padding-top">
                     <h2>How to Backup Your WordPress Website with UpdraftPlus</h2>
                     <p>Ask yourself a question: when was the last time you backed up your WordPress website? Hopefully the answer is not "three years ago", or worse still, "never"! Imagine spending weeks or months on building your website, only to lose all the results of your hard work forever 😭 …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/backup-wordpress-website-using-updraftplus">Backup Your Website</a>
+                    <a class="btn-primary" href="https://sybiltec.com/backup-wordpress-website-using-updraftplus/">Backup Your Website</a>
                 </div>
-                <div class="center padding-top padding-bottom"><a href="https://sybiltec.com/blog-2">Page 2</a></div>
+                <div class="center padding-top padding-bottom"><a href="https://sybiltec.com/blog-2/">Page 2</a></div>
             </div>
         </div>
         <div class="contact section">
@@ -225,7 +228,7 @@
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
                     </div>
                 </div>
                 </div>
@@ -236,20 +239,20 @@
                     <div class="col-3">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="https://sybiltec.com/about">About</a></p>
-                        <p><a href="https://sybiltec.com/contact">Contact</a></p>
-                        <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybiltec.com/privacy-notice">Privacy Notice</a></p>
-                        <p><a href="https://sybiltec.com/sitemap">Sitemap</a></p>
+                        <p><a href="https://sybiltec.com/about/">About</a></p>
+                        <p><a href="https://sybiltec.com/contact/">Contact</a></p>
+                        <p><a href="https://sybiltec.com/terms-and-conditions/">Terms and Conditions</a></p>
+                        <p><a href="https://sybiltec.com/privacy-notice/">Privacy Notice</a></p>
+                        <p><a href="https://sybiltec.com/sitemap/">Sitemap</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
-                        <p><a href="https://sybiltec.com/ecommerce-websites">E-commerce Websites</a></p>
-                        <p><a href="https://sybiltec.com/website-review">Website Review</a></p>
-                        <p><a href="https://sybiltec.com/website-design">Web Design</a></p>
-                        <p><a href="https://sybiltec.com/website-maintenance">Website Maintenance</a></p>
-                        <p><a href="https://sybiltec.com/training">Training</a></p>
-                        <p><a href="https://sybiltec.com/leaflet-design">Leaflet Design</a></p>
+                        <p><a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a></p>
+                        <p><a href="https://sybiltec.com/website-review/">Website Review</a></p>
+                        <p><a href="https://sybiltec.com/website-design/">Web Design</a></p>
+                        <p><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></p>
+                        <p><a href="https://sybiltec.com/training/">Training</a></p>
+                        <p><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></p>
                     </div>
                     <div class="col-3">
                         <div class="ml-form-embed"
