--- a/services.html
+++ b/services.html
@@ -1,3 +1,6 @@
+---
+permalink: /services/
+---
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -34,7 +37,7 @@
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Services | Freelance Web Designer South East London | Sybiltec" />
         <meta property="og:description" content="Sybiltec provides a range of services, including bespoke web design and build, e-commerce websites and website maintenance. Contact me today for a quote." />
-        <meta property="og:url" content="https://sybiltec.com/services" />
+        <meta property="og:url" content="https://sybiltec.com/services/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -109,13 +112,13 @@
         }
         }
         </script>
-        <link rel="canonical" href="https://sybiltec.com/services" />
+        <link rel="canonical" href="https://sybiltec.com/services/" />
         <link rel="stylesheet" href="https://sybiltec.com/styles.min.css" type="text/css">
         <link rel="icon" type="image/png" href="https://sybiltec.com/favicon.png">    
     </head>
     <body>
         <div class="announcement-bar">
-            <a href="https://sybiltec.com/web-design-bexley">Click Here for Subsidised Web Design Services for Bexley Businesses</a>
+            <a href="https://sybiltec.com/web-design-bexley/">Click Here for Subsidised Web Design Services for Bexley Businesses</a>
         </div>
         <div class="header">
                 <div class="container-1140">
@@ -129,12 +132,12 @@
                             <div class="nav">
                                     <div class="topnav" id="myTopnav">
                                         <a href="/">Home</a>
-                                        <a href="https://sybiltec.com/about">About</a>
-                                        <a href="https://sybiltec.com/services">Services</a>
-                                        <a href="https://sybiltec.com/clients">Clients</a>
-                                        <a href="https://sybiltec.com/faqs">FAQs</a>
-                                        <a href="https://sybiltec.com/blog">Blog</a>
-                                        <a href="https://sybiltec.com/contact">Contact</a>
+                                        <a href="https://sybiltec.com/about/">About</a>
+                                        <a href="https://sybiltec.com/services/">Services</a>
+                                        <a href="https://sybiltec.com/clients/">Clients</a>
+                                        <a href="https://sybiltec.com/faqs/">FAQs</a>
+                                        <a href="https://sybiltec.com/blog/">Blog</a>
+                                        <a href="https://sybiltec.com/contact/">Contact</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
                                         </a>
@@ -168,7 +171,7 @@
                         <h3>Custom Website Design</h3>
                         <p>If you are looking to create a website that is as unique as you are, I will design a professional and user-friendly website that perfectly reflects your brand and style.</p>
                         <div class="center padding-bottom padding-top">
-                            <a class="btn-primary" href="https://sybiltec.com/website-design">Web Design</a>   
+                            <a class="btn-primary" href="https://sybiltec.com/website-design/">Web Design</a>   
                         </div>
                         </div>
                     </div>
@@ -178,7 +181,7 @@
                         <h3>E-commerce Websites</h3>
                         <p>Are you planning to sell your products or services online? If yes, you'll need an e-commerce site. I will design and build an online store for your business on Shopify or WooCommerce.</p>
                         <div class="center padding-bottom padding-top">
-                            <a class="btn-primary" href="https://sybiltec.com/ecommerce-websites">E-commerce Websites</a>   
+                            <a class="btn-primary" href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a>   
                         </div>
                         </div>
                     </div>
@@ -188,7 +191,7 @@
                         <h3>Website Maintenance</h3>
                         <p>As a business owner, you're most likely a very busy person with little time to spare! I will be your long-term partner to manage the ongoing maintenance of your website.</p>
                         <div class="center padding-bottom padding-top">
-                            <a class="btn-primary" href="https://sybiltec.com/website-maintenance">Web Maintenance</a>   
+                            <a class="btn-primary" href="https://sybiltec.com/website-maintenance/">Web Maintenance</a>   
                         </div>
                         </div>
                     </div>
@@ -200,7 +203,7 @@
                     <h3>Leaflet Design</h3>
                     <p>If you need a flyer, poster or social media graphic created for your upcoming event, choose my leaflet design service.</p>
                     <div class="center padding-bottom padding-top">
-                        <a class="btn-primary" href="https://sybiltec.com/leaflet-design">Leaflet Design</a>   
+                        <a class="btn-primary" href="https://sybiltec.com/leaflet-design/">Leaflet Design</a>   
                     </div>
                     </div>
                     </div>
@@ -210,7 +213,7 @@
                         <h3>Website Review</h3>
                         <p>A detailed report with feedback on the main aspects of your site's user experience, search engine optimisation (SEO) and design. Recommended improvements are provided.</p>
                         <div class="center padding-bottom padding-top">
-                            <a class="btn-primary" href="https://sybiltec.com/website-review">Website Review</a>   
+                            <a class="btn-primary" href="https://sybiltec.com/website-review/">Website Review</a>   
                         </div>
                         </div>
                     </div>
@@ -220,7 +223,7 @@
                         <h3>Training</h3>
                         <p>Do you need a facilitator for your training event? I can host webinars or in-person workshops on topics ranging from getting your business online to setting up a Shopify store.</p>
                         <div class="center padding-bottom padding-top">
-                            <a class="btn-primary" href="https://sybiltec.com/training">Training</a>   
+                            <a class="btn-primary" href="https://sybiltec.com/training/">Training</a>   
                         </div>
                         </div>
                     </div>
@@ -235,7 +238,7 @@
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact/">Contact Me</a>
                     </div>
                 </div>
                 </div>
@@ -246,20 +249,20 @@
                     <div class="col-3">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="https://sybiltec.com/about">About</a></p>
-                        <p><a href="https://sybiltec.com/contact">Contact</a></p>
-                        <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://sybiltec.com/privacy-notice">Privacy Notice</a></p>
-                        <p><a href="https://sybiltec.com/sitemap">Sitemap</a></p>
+                        <p><a href="https://sybiltec.com/about/">About</a></p>
+                        <p><a href="https://sybiltec.com/contact/">Contact</a></p>
+                        <p><a href="https://sybiltec.com/terms-and-conditions/">Terms and Conditions</a></p>
+                        <p><a href="https://sybiltec.com/privacy-notice/">Privacy Notice</a></p>
+                        <p><a href="https://sybiltec.com/sitemap/">Sitemap</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
-                        <p><a href="https://sybiltec.com/ecommerce-websites">E-commerce Websites</a></p>
-                        <p><a href="https://sybiltec.com/website-review">Website Review</a></p>
-                        <p><a href="https://sybiltec.com/website-design">Web Design</a></p>
-                        <p><a href="https://sybiltec.com/website-maintenance">Website Maintenance</a></p>
-                        <p><a href="https://sybiltec.com/training">Training</a></p>
-                        <p><a href="https://sybiltec.com/leaflet-design">Leaflet Design</a></p>
+                        <p><a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a></p>
+                        <p><a href="https://sybiltec.com/website-review/">Website Review</a></p>
+                        <p><a href="https://sybiltec.com/website-design/">Web Design</a></p>
+                        <p><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></p>
+                        <p><a href="https://sybiltec.com/training/">Training</a></p>
+                        <p><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></p>
                     </div>
                     <div class="col-3">
                         <div class="ml-form-embed"
